# tiny-rpg-studio

./: .gitignore  AGENTS.md  CHOICE-DIALOG-PLAN.md  README.md  SDK_PLAN.md  SDK_README.md  arquitetura-engine.md  engine-architecture.md  engine-features.md  eslint.config.js  index.html  package-lock.json  package.json  progress.md  sonar-project.properties  styles.css  tsconfig.json  tsconfig.sdk.json  vite.config.ts  vite.export.config.ts  vite.sdk.config.ts
.claude/: settings.local.json
.github/workflows/: code-quality.yml  deploy.yml  publish-sdk.yml  release-desktop.yml
.tools/: capture-bitmap-font-screens.mjs
coverage/: clover.xml  coverage-final.json  index.html
coverage/config/: EditorConfig.ts.html  EditorConfigSchema.ts.html  GameConfig.ts.html  GameConfigSchema.ts.html  index.html
coverage/showcase/: ShareCoverPreview.ts.html  index.html
examples/hello-world/: README.md  advanced.mjs  hello-world.mjs  package-lock.json  package.json
partykit/src/: party.ts
public/: export.bundle.js  jam-games.json  privacy.html  robots.txt  sitemap.xml  tiny-rpg-maker.css  tiny-rpg-studio-sdk.css
public/.well-known/: assetlinks.json
scripts/: generate-pico8-webfont.mjs
src/: BootLoadingScreen.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: GameEngine.test.ts  GameState.critical.test.ts  GameState.test.ts  InputManager.test.ts  TileManager.test.ts  main.initialize.test.ts  main.test.ts  setup.ts
src/config/: EditorConfig.ts  EditorConfigSchema.ts  FontConfig.ts  GameConfig.d.ts  GameConfig.ts  (+2 more)
(+438 files in other folders)
