[package]
name = "tiny-rpg-studio"
version = "1.3.0"
edition = "2021"

[lib]
name = "tiny_rpg_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
